--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Exclude src/bin and src/obj folders
+src/bin/
+src/obj/
+
+# Exclude src/.vs folder
+src/.vs/
